--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,22 @@
-.btn{
-  width:  100px;
-  aspect-ratio: 1/1;
-  border-radius: 100%;
-  border: 5px solid black;
-  background-color: red;
-  padding: 20px;
-  font-weight: bold;
-  font-size: 40px;
+.btn {
+  align-self: flex-end;
+  padding: 0.75rem 1.5rem;
+  background-color: #555;
+  color: white;
+  border: none;
+  border-radius: 12px;
+  font-size: 1rem;
   cursor: pointer;
 }
 
-.btnContainer{
-    width: 70%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: flex-end;
+.btn:hover{
+  background-color: #444;
+}
+
+
+.btnContainer {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
 }
